# Hello-Graphine-Demo

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
app_graphql/orders/: filters.py  schema.py  sorter.py  types.py
app_graphql/orders/mutations/: create_order.py  delete_order.py  update_order.py
app_graphql/permissions/: schema.py  types.py
app_graphql/permissions/mutations/: create_permission.py  create_permission_group.py
app_graphql/users/: schema.py  types.py
app_graphql/users/mutations/: create_user.py  delete_user.py  update_user.py
config/: graphql_view.py  settings.py  urls.py
orders/: models.py
orders/migrations/: 0001_initial.py
permissions/: models.py
permissions/migrations/: 0001_initial.py
templates/graphql/: playground.html
users/: models.py
