[project]
name = "hello-graphine-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "graphene>=3.4.3",
    "poethepoet>=0.42.1",
    "uvicorn>=0.42.0",
]

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
dev = "uvicorn config.asgi:application --reload --host 0.0.0.0 --port 8000"
start = "uvicorn config.asgi:application --host 0.0.0.0 --port 8000"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
